<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.aerospike</groupId>
    <artifactId>firefly</artifactId>
    <version>2.5.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <!-- PROJECT DETAILS -->
    <name>Firefly</name>
    <description>Graph Computing On Aerospike</description>
    <url>https://aerospike.com</url>
    <inceptionYear>2022</inceptionYear>
    <!-- PRIMARY DEVELOPERS -->
    <developers>
        <developer>
            <name>Marko A. Rodriguez</name>
            <email>marko@markorodriguez.com</email>
            <organization>PhaseShift Studio</organization>
        </developer>
        <developer>
            <name>Grant Haywood</name>
            <email>grant@iowntheinter.net</email>
            <organization>Aerospike</organization>
        </developer>
        <developer>
            <name>Lyndon Bauto</name>
            <email>lyndonb@apache.org</email>
            <organization>Aerospike</organization>
        </developer>
        <developer>
            <name>Simon Zhao</name>
            <email>szhao@aerospike.com</email>
            <organization>Aerospike</organization>
        </developer>
        <developer>
            <name>Valentyn Kahamlyk</name>
            <email>vkahamlyk@aerospike.com</email>
            <organization>Aerospike</organization>
        </developer>
    </developers>
    <!-- firefly SUBMODULES (COMPILE ORDERED) -->
    <modules>
        <module>aerospike-graph-gremlin</module>
        <module>aerospike-graph-bulk-loader</module>
        <module>aerospike-graph-api</module>
    </modules>
    <!-- VERSION DEPENDENCIES (INHERITED BY ALL SUBMODULES) -->
    <properties>
        <firefly.version>2.5.0-SNAPSHOT</firefly.version>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <aerospike-client.version>7.2.1</aerospike-client.version>
        <tinkerpop.version>3.7.2</tinkerpop.version>
        <junit.version>4.13.1</junit.version>
        <awaitly.version>4.2.0</awaitly.version>
        <logback.version>1.2.13</logback.version>
        <slf4j.version>1.7.30</slf4j.version>
        <guava.version>31.1-jre</guava.version>
        <resilience4j.version>1.7.1</resilience4j.version>
        <vertx.version>4.4.8</vertx.version>
        <prometheus.version>0.16.0</prometheus.version>
        <awssdk.version>1.12.641</awssdk.version>
        <!-- MAVEN PLUGIN VERSIONS -->
        <mvn-shade-plugin.version>3.5.1</mvn-shade-plugin.version>
        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <build-helper.version>3.3.0</build-helper.version>
        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <!-- SOURCE ENCODINGS -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!-- DEPLOYMENT REPOSITORIES -->
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>
    <!-- BUILD/DOC INFRASTRUCTURE -->
    <build>
        <directory>${basedir}/target</directory>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <testSourceDirectory>firefly-core/src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <directory>firefly-core/src/main/resources
                </directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>firefly-core/src/test/resources
                </directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>io.snyk</groupId>
                <artifactId>snyk-maven-plugin</artifactId>
                <version>2.0.0</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>snyk-test</id>
                    </execution>
                </executions>
                <configuration>
                    <args>
                        <arg>--maven-aggregate-project</arg>
                        <arg>--severity-threshold=high</arg>
                    </args>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.ec4j.maven</groupId>
                <artifactId>editorconfig-maven-plugin</artifactId>
                <version>0.1.3</version>
                <executions>
                    <execution>
                        <id>check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- See http://ec4j.github.io/editorconfig-maven-plugin/ for full configuration reference -->
                    <excludes>
                    </excludes>
                    <!-- All files are included by default:
                    <includes>
                      <include>**</include>
                    </includes>
                    -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <environmentVariables>
                        <FIREFLY_TESTING>true</FIREFLY_TESTING>
                        <!--
                            This should be set to the lowest version of Aerospike graph that is available in dockerhub.
                            Note the major version must align. In this case, 1.0.0 was removed, so we use 1.0.1
                         -->
                        <COMPATIBILITY_VERSION>2.0.0</COMPATIBILITY_VERSION>
                    </environmentVariables>
                    <argLine>
                        -Dbuild.dir=${project.build.directory}
                        -Dis.testing=true -Djava.net.preferIPv4Stack=true
                    </argLine>
                    <trimStackTrace>false</trimStackTrace>
                    <excludes>
                        <exclude>**/Firefly*StandardTest*</exclude>
                        <exclude>**/BenchmarkTest*</exclude>
                        <exclude>**/TestPhantomEdges</exclude>
                        <exclude>**/ValidConnectionTest.java</exclude>
                        <exclude>**/TestPerformanceModes.java</exclude>
                        <exclude>**/TestDockerJavaOptions.java</exclude>
                        <exclude>**/TestDockerConfigs.java</exclude>
                        <exclude>**/TestSlimVsFat.java</exclude>
                        <exclude>**/TestDockerShutdown.java</exclude>
                        <exclude>**/FireflyUsageStatsCallMultiTest.java</exclude>
                        <exclude>**/TestMovielens1M.java</exclude>
                        <exclude>**/TestFireflyExceedHeap.java</exclude>
                        <exclude>**/FireflyAerospikeVersionCheckTest.java</exclude>
                        <exclude>**/FireflyAerospikeGraphServiceCheckTest.java</exclude>
                        <exclude>**/TestTLSIntegration.java</exclude>
                        <exclude>**/PrometheusExporterTest.java</exclude>
                        <exclude>**/TestAerospikeTTL.java</exclude>
                        <exclude>**/JwtAuthenticationDockerTest.java</exclude>
                        <exclude>**/CustomPrometheusExporterTest.java</exclude>
                        <exclude>**/TestFireflyBulkLoaderCallEntrypointRemote.java</exclude>
                        <exclude>**/TestFireflyBulkLoaderCallEntrypointRemoteFailsWithoutSpark.java</exclude>
                        <exclude>**/TestFireflyServer.java</exclude>
                        <exclude>**/TestAerospikeClientProviderConfiguration.java</exclude>
                        <exclude>**/TestRecoveryUtil</exclude>
                        <exclude>**/TestSparkStateMachineRecovery</exclude>
                        <exclude>**/TestBulkLoaderRecovery</exclude>
                        <exclude>**/TestRecoveryActionFlags</exclude>
                        <exclude>**/QueryServiceAbortTest</exclude>
                        <exclude>**/TestAerospikeClientConfigEventLoop</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <id>aggregate-surefire-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <phase>install</phase>
                        <configuration>
                            <aggregate>true</aggregate>
                            <alwaysGenerateSurefireReport>true</alwaysGenerateSurefireReport>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>low_memory</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <property>
                    <name>jvmheapsize</name>
                    <value>small</value>
                </property>
            </activation>
            <properties>
                <!-- Java heap parameters -->
                <maxheap>1000m</maxheap>
                <minheap>100m</minheap>
            </properties>
        </profile>
        <profile>
            <id>normal</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- Java heap parameters -->
                <maxheap>20g</maxheap>
                <minheap>4096m</minheap>
            </properties>
        </profile>
    </profiles>
</project>
